--- a/latihan4.html
+++ b/latihan4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Game</title>
-    <link rel="icon" href="/latihan/image/gaming.ico" type="ico"
+    <link rel="icon" href="/Game/gaming.ico" type="ico"
     
 <!--EDIT TABLE-->
 <style>
@@ -20,7 +20,7 @@
     tr:hover {background-color: burlywood;}
 </style>
 <h1 style="text-align: center;">Square Enix and Final Fantasy Series</h1>
-<a href="http://surl.li/zzgilr" target="_blank"><img src="/latihan/image/enix.jpg" style="display: block; margin: auto;"></a><br>
+<a href="http://surl.li/zzgilr" target="_blank"><img src="/Game/enix.jpg" style="display: block; margin: auto;"></a><br>
 <p style="text-align: center;">Square Enix Holdings Co., Ltd. (株式会社スクウェア・エニックス・ホールディングス, Kabushiki gaisha Sukuwea Enikkusu Hōrudingusu) adalah pengembang, penerbit, dan perusahaan distribusi Jepang yang terkenal 
  dengan waralaba permainan peran videonya, yang meliputi Final Fantasy, Dragon Quest, dan Kingdom Hearts. Per 31 Maret 2017 perusahaan dapat menghasilkan penjualan bersih hingga lebih dari 250 miliar yen,
  dan juga mempekerjakan lebih dari 4000 karyawan di seluruh dunia. Final Fantasy (Bahasa Jepang: ファイナルファンタジー Fainaru Fantajii) adalah seri permainan RPG konsol dan komputer yang diciptakan oleh Hironobu Sakaguchi dan diproduksi oleh Square Enix (sebelumnya bernama Square Co., Ltd.). Final Fantasy merupakan seri permainan yang paling banyak didistribusikan sepanjang masa, 
@@ -75,9 +75,9 @@
 </style>
 <h2 class="Series Pertama" style="text-align: center;color: silver;background-color: black;">Final Fantasy Terbaik Pertama</h2>
 <h3>Final Fantasy VII</h3>
-<p style="text-align: justify;"><img src="/latihan/image/ff7.webp" style="float: right;margin-left: 15px;width: 180px;height: 215px;">
+<p style="text-align: justify;"><img src="/Game/ff7.webp" style="float: right;margin-left: 15px;width: 180px;height: 215px;">
     <!--Vidio ada dikanan / kiri--> <video style="float: left;margin-right: 15px; width: 380px;height: 340px;" controls>
-    <source src="/latihan/image/ffvii.mp4" type="video/mp4"></video>Kisah Final Fantasy VIII mengikuti Squall Leonhart , seorang kadet di akademi militer bernama Balamb Garden . Squall berusaha untuk menjadi SeeD , seorang tentara bayaran yang dapat menggunakan sihir dengan bantuan makhluk ajaib yang dikenal sebagai Guardian Forces. Balamb Garden adalah satu-satunya institusi di dunia yang mengizinkan penggunaan makhluk tersebut, dan penggunaannya meniru kekuatan seorang penyihir, wanita yang dapat menggunakan sihir secara alami yang ditakuti dan dihormati. 
+    <source src="/Game/ffvii.mp4" type="video/mp4"></video>Kisah Final Fantasy VIII mengikuti Squall Leonhart , seorang kadet di akademi militer bernama Balamb Garden . Squall berusaha untuk menjadi SeeD , seorang tentara bayaran yang dapat menggunakan sihir dengan bantuan makhluk ajaib yang dikenal sebagai Guardian Forces. Balamb Garden adalah satu-satunya institusi di dunia yang mengizinkan penggunaan makhluk tersebut, dan penggunaannya meniru kekuatan seorang penyihir, wanita yang dapat menggunakan sihir secara alami yang ditakuti dan dihormati. 
     <br>Meskipun awalnya penyendiri, pencarian Squall membuatnya berteman dengan berbagai orang dan dia belajar untuk bergantung pada mereka saat SeeD terlibat dalam misi melindungi dunia. <br>Cerita berpusat pada petualangan seorang mantan prajurit bernama Cloud Strife, yang bergabung dengan kelompok eco-teroris bernama AVALANCHE untuk menghentikan perusahaan jahat Shinra dari mengeksploitasi energi planet. 
     Shinra menggunakan energi yang disebut Mako, yang sebenarnya adalah energi kehidupan planet itu sendiri, untuk menggerakkan kota-kota dan teknologi mereka. Di akhir cerita, Cloud dan timnya berhasil mengalahkan Sephiroth dalam pertarungan epik, dan kekuatan suci yang dipanggil Aerith akhirnya berhasil menghapus meteor, menyelamatkan planet dari kehancuran. Cerita diakhiri dengan catatan samar, menunjukkan dampak positif dari upaya mereka meskipun dunia tetap berubah drastis akibat krisis energi. <br>Final Fantasy VII juga menyinggung tema identitas, tanggung jawab lingkungan, dan nilai-nilai persahabatan, menjadikannya salah satu kisah yang terus dikenang dalam sejarah video game. Terbukti dengan hadirnya game Final Fantasy VII Remake, yang berhasil membuat para gamers yang dulu bermain Final Fantasy VII ketika masih berada di konsol Playstation 1. Sekarang mereka bisa bernostalgia dengan memainkannya di konsol Playstation 4/5, dan mengenang kenangannya saat dulu.
 </p>
@@ -95,9 +95,9 @@
 </ul>
 <h2 class="Series Kedua" style="text-align: center;color: whitesmoke;background-color: teal">Finak Fantasy Terbaik Kedua</h2>
 <h3>Final Fantasy VIII</h3>
-<p style="text-align: justify;"><img src="/latihan/image/ffviii.jpg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/Game/ffviii.jpg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--DISINI JUGA ADA VIDEO NYA YAA PAAKK--> <video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
-    <source src="/latihan/image/ff8.mp4" type="video/mp4"></video> Final Fantasy VIII berfokus pada petualangan Squall Leonhart, seorang pemuda pendiam dan penyendiri yang berlatih di akademi militer Balamb Garden untuk menjadi SeeD—pasukan elit yang ditugaskan untuk melawan ancaman global. 
+    <source src="/Game/ff8.mp4" type="video/mp4"></video> Final Fantasy VIII berfokus pada petualangan Squall Leonhart, seorang pemuda pendiam dan penyendiri yang berlatih di akademi militer Balamb Garden untuk menjadi SeeD—pasukan elit yang ditugaskan untuk melawan ancaman global. 
     <br> Cerita dimulai ketika Squall dan teman-temannya, termasuk Quistis, Zell, Selphie, dan Rinoa, terjebak dalam konflik dengan penyihir jahat bernama Edea, yang dikendalikan oleh kekuatan jahat dari masa depan. Squall bertemu dengan Rinoa Heartilly, seorang anggota kelompok pemberontak yang penuh semangat. Meskipun sifat mereka bertolak belakang, mereka mulai saling jatuh cinta seiring berjalannya petualangan. 
     Di tengah misi mereka, Squall dan teman-temannya menyadari bahwa Edea hanyalah pion dari kekuatan yang lebih besar dan mengancam, yaitu Penyihir Ultimecia dari masa depan, yang berencana untuk mengendalikan waktu dan ruang dengan menggunakan kekuatan Time Compression, sebuah proses yang akan menyatukan semua waktu dalam satu titik sehingga Ultimecia bisa menguasainya.
 </p>
@@ -114,9 +114,9 @@
 </table>
 <h2 class="Series Ketiga" style="text-align: center;color: goldenrod;background-color: black;">Final Fantasy Terbaik Ketiga</h2>
 <h3>Final Fantasy IX</h3>
-<p style="text-align: justify;"><img src="/latihan/image/ff9.webp" style="float: right;margin-left: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/Game/ff9.webp" style="float: right;margin-left: 10px;width: 150px;height: 215px;">
     <!--DISINI JUGA ADA VIDEO NYA YAA PAAKK--><video style="float: left;margin-right: 10px;width: 350px;height: 300px;" controls>
-<source src="/latihan/image/ffix.mp4" type="video/mp4"></video>Final Fantasy IX mengisahkan petualangan Zidane Tribal, seorang pencuri muda dari kelompok teater dan pencuri bernama Tantalus, yang mendapat misi menculik Putri Garnet Til Alexandros XVII dari kerajaan Alexandria. Namun, Garnet sebenarnya sudah berencana untuk melarikan diri karena ia mencurigai bahwa ibunya, Ratu Brahne, memiliki niat jahat setelah terpengaruh oleh seorang pria misterius bernama Kuja.
+<source src="/Game/ffix.mp4" type="video/mp4"></video>Final Fantasy IX mengisahkan petualangan Zidane Tribal, seorang pencuri muda dari kelompok teater dan pencuri bernama Tantalus, yang mendapat misi menculik Putri Garnet Til Alexandros XVII dari kerajaan Alexandria. Namun, Garnet sebenarnya sudah berencana untuk melarikan diri karena ia mencurigai bahwa ibunya, Ratu Brahne, memiliki niat jahat setelah terpengaruh oleh seorang pria misterius bernama Kuja.
 <br>Zidane, Garnet, dan kelompoknya memulai perjalanan penuh petualangan untuk mengungkap rahasia kekuatan mistis yang mengancam dunia. Dalam perjalanan itu, mereka bertemu dengan beberapa karakter yang menjadi teman seperjuangan, seperti Vivi Orunitia, seorang penyihir hitam yang mencoba memahami jati dirinya; Steiner, ksatria Alexandria yang sangat setia kepada Garnet; dan Freya Crescent, ksatria naga yang mencari cinta lamanya.
 <br>Selama petualangan mereka, mereka menghadapi ancaman dari Kuja, yang ternyata adalah agen dari planet lain bernama Terra. Kuja menggunakan kekuatan mistis bernama "Mist" untuk menciptakan senjata dan monster yang menimbulkan kerusakan di dunia mereka. Namun, ketika rencana Kuja berbalik dan ia menghadapi kenyataan kematian, ia berusaha menghancurkan seluruh dunia sebagai bentuk balas dendam.
 <br>Zidane dan teman-temannya akhirnya berjuang melawan Kuja dan kekuatan jahat yang lebih besar bernama Necron, yang muncul sebagai simbol kehampaan dan kehancuran. Setelah pertempuran epik, mereka berhasil menyelamatkan dunia, dan masing-masing kembali ke kehidupan mereka, membawa serta pelajaran dan pengalaman dari petualangan mereka.
@@ -136,9 +136,9 @@ Cerita Final Fantasy IX ditutup dengan reuni Zidane dan Garnet, yang menyoroti t
 
 <h2 class="Series Keempat" style="text-align: center; color: lightgoldenrodyellow;background-color: darkmagenta;">Final Fantasy Terbaik Keempat</h2>
 <h3>Final Fantasy X</h3>
-<p style="text-align: justify;"><img src="/latihan/image/ffx.jpg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/Game/ffx.jpg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--DISINI JUGA ADA VIDEO NYA YAA PAAKK--><video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
-    <source src="/latihan/image/ff10.mp4" type="video/mp4"></video> Final Fantasy X mengikuti kisah Tidus, seorang pemain blitzball terkenal dari kota futuristik bernama Zanarkand. Saat sedang bertanding, kotanya tiba-tiba diserang oleh monster raksasa yang disebut Sin, dan Tidus terseret ke dunia asing bernama Spira. Di Spira, Tidus bertemu seorang pria bernama Auron yang mengungkapkan bahwa Sin adalah penyebab kehancuran Zanarkand dan kehidupan Spira yang penuh penderitaan.
+    <source src="/Game/ff10.mp4" type="video/mp4"></video> Final Fantasy X mengikuti kisah Tidus, seorang pemain blitzball terkenal dari kota futuristik bernama Zanarkand. Saat sedang bertanding, kotanya tiba-tiba diserang oleh monster raksasa yang disebut Sin, dan Tidus terseret ke dunia asing bernama Spira. Di Spira, Tidus bertemu seorang pria bernama Auron yang mengungkapkan bahwa Sin adalah penyebab kehancuran Zanarkand dan kehidupan Spira yang penuh penderitaan.
     Di dunia baru ini, Tidus bergabung dengan seorang summoner muda bernama Yuna, yang sedang menjalani perjalanan suci untuk mengalahkan Sin dengan bantuan para penjaga atau guardian, termasuk Wakka, Lulu, Kimahri, Rikku, dan Auron. Mereka berziarah ke berbagai kuil di Spira untuk mendapatkan kekuatan Aeon, entitas magis yang diperlukan untuk mengalahkan Sin.
     <br>Selama perjalanan, Tidus dan Yuna semakin dekat, dan Tidus mulai menyadari bahwa mengalahkan Sin mungkin memiliki konsekuensi yang berat. Mereka menemukan bahwa untuk memanggil Final Aeon yang diperlukan untuk mengalahkan Sin, seorang summoner harus mengorbankan dirinya. Selain itu, Sin selalu kembali karena sebenarnya ia adalah siklus kehancuran yang terus berulang, dipicu oleh kejahatan Yu Yevon yang mengendalikan Sin.
 </p>
@@ -155,9 +155,9 @@ Cerita Final Fantasy IX ditutup dengan reuni Zidane dan Garnet, yang menyoroti t
 </table>
 <h2 class="Series Kelima" style="text-align: center;color: goldenrod;background-color: green;">Final Fantasy Terbaik Kelima</h2>
 <h3>Final Fantasy XII</h3>
-<p style="text-align: justify;"><img src="/latihan/image/ff12.jpg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/Game/ff12.jpg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--Vidio Ada di Kanan / Kiri WEB ya pak--><video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
-    <source src="/latihan/image/ffxii.mp4" type="video/mp4"></video>Final Fantasy XII berlatar di dunia Ivalice, di mana dua kerajaan besar, Archadia dan Rozarria, berperang, dan kerajaan kecil Dalmasca terjepit di antara konflik mereka. Cerita dimulai setelah Archadia menduduki Dalmasca, membuat banyak rakyatnya terpuruk, termasuk pangeran muda Dalmasca yang menjadi yatim piatu, Vaan, yang bermimpi menjadi penjelajah langit.
+    <source src="/Game/ffxii.mp4" type="video/mp4"></video>Final Fantasy XII berlatar di dunia Ivalice, di mana dua kerajaan besar, Archadia dan Rozarria, berperang, dan kerajaan kecil Dalmasca terjepit di antara konflik mereka. Cerita dimulai setelah Archadia menduduki Dalmasca, membuat banyak rakyatnya terpuruk, termasuk pangeran muda Dalmasca yang menjadi yatim piatu, Vaan, yang bermimpi menjadi penjelajah langit.
     <br>Cerita berkembang saat Vaan bertemu dengan Ashelia B’nargin Dalmasca (Ashe), putri yang hilang dari kerajaan Dalmasca yang memimpin pemberontakan rahasia untuk membebaskan kerajaannya dari kekuasaan Archadia. Dalam perjalanan, mereka bertemu dengan beberapa sekutu, termasuk Balthier, seorang bajak laut udara yang cerdas; Fran, partner Balthier yang merupakan prajurit suku Viera; Basch, mantan kapten penjaga kerajaan yang difitnah sebagai pengkhianat; dan Penelo, sahabat Vaan yang ikut terjebak dalam petualangan mereka.
 
     Para karakter bergabung dalam misi Ashe untuk mengumpulkan kekuatan kuno "Nethicite" yang memiliki kekuatan luar biasa. Mereka belajar bahwa "Nethicite" telah lama digunakan oleh dewa-dewa kuno yang disebut "Occuria" untuk mengontrol dunia. Namun, Ashe menghadapi dilema moral: apakah dia akan menggunakan kekuatan ini untuk membalas dendam atau mencari jalan baru menuju kedamaian tanpa mengikuti takdir yang ditentukan oleh dewa.
@@ -177,9 +177,9 @@ Cerita Final Fantasy IX ditutup dengan reuni Zidane dan Garnet, yang menyoroti t
 </table>
 <h2 class="Series Keenam" style="text-align: center;color: black;background-color: burlywood;">Final Fantasy Terbaik Keenam</h2>
 <h3>Final Fantasy XV</h3>
-<p style="text-align: justify;"><img src="/latihan/image/ff15.jpg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/Game/ff15.jpg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--VIDIO ada di kanan kiri ya pak--><video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
-    <source src="/latihan/image/ffxv.mp4" type="video/mp4"></video>Final Fantasy XV menceritakan kisah Pangeran Noctis Lucis Caelum dari kerajaan Lucis, yang sedang dalam perjalanan menuju pernikahannya dengan Lady Lunafreya Nox Fleuret dari kerajaan Tenebrae, sebagai bagian dari upaya untuk mengakhiri perang dengan kekaisaran Niflheim yang agresif. Namun, perjalanan Noctis berubah drastis saat ia mendengar bahwa Niflheim telah menyerang ibu kota Lucis, Insomnia, dan membunuh ayahnya, Raja Regis, serta merebut kristal yang melindungi kerajaan.
+    <source src="/Game/ffxv.mp4" type="video/mp4"></video>Final Fantasy XV menceritakan kisah Pangeran Noctis Lucis Caelum dari kerajaan Lucis, yang sedang dalam perjalanan menuju pernikahannya dengan Lady Lunafreya Nox Fleuret dari kerajaan Tenebrae, sebagai bagian dari upaya untuk mengakhiri perang dengan kekaisaran Niflheim yang agresif. Namun, perjalanan Noctis berubah drastis saat ia mendengar bahwa Niflheim telah menyerang ibu kota Lucis, Insomnia, dan membunuh ayahnya, Raja Regis, serta merebut kristal yang melindungi kerajaan.
     <br>Bersama tiga sahabat dan pengawalnya—Gladiolus Amicitia yang kuat, Ignis Scientia yang bijaksana, dan Prompto Argentum yang ceria—Noctis memulai perjalanan untuk merebut kembali kerajaannya dan mengalahkan kekaisaran Niflheim. Dalam perjalanan, ia juga menemukan bahwa ia adalah "Raja Terpilih" yang memiliki takdir besar untuk menyelamatkan dunia dari ancaman kegelapan, dengan bantuan dewa-dewa atau "Astral" yang memberikan kekuatan mereka.
     <br>Lady Lunafreya, sebagai penyembuh yang juga berkomunikasi dengan para Astral, memainkan peran penting dalam membimbing Noctis menuju takdirnya. Namun, mereka menghadapi berbagai tantangan, termasuk perlawanan dari Ardyn Izunia, kanselir kekaisaran Niflheim yang misterius dan manipulatif. Ardyn ternyata memiliki dendam lama dengan keluarga kerajaan Lucis dan berencana menggagalkan takdir Noctis.
 <h4>KARAKTER</h4>
@@ -220,11 +220,11 @@ Cerita Final Fantasy IX ditutup dengan reuni Zidane dan Garnet, yang menyoroti t
     }
 </style>
 <div class="content">
-    <img src="/latihan/image/1.jpg" style="margin-right: 20px;margin-left: 70px; width: 250px;height: 431px;"> 
-    <img src="/latihan/image/2.jpg" style="margin-right: 20px;margin-left: 70px; width: 300px;height: 400px;"> 
-    <img src="/latihan/image/3.jpg" style="margin-right: 20px;margin-left: 50px;"> 
-    <img src="/latihan/image/4.jpg" style="margin-right: 20px;margin-right: 30px;margin-left: 70px;margin-top: 50px;width: 300px;height: 250px;">
-    <img src="/latihan/image/5.jpg" style="margin-right: 20px;margin-right: 20px;margin-left: 20px;margin-top: 30px;"> 
+    <img src="/Game/1.jpg" style="margin-right: 20px;margin-left: 70px; width: 250px;height: 431px;"> 
+    <img src="/Game/2.jpg" style="margin-right: 20px;margin-left: 70px; width: 300px;height: 400px;"> 
+    <img src="/Game/3.jpg" style="margin-right: 20px;margin-left: 50px;"> 
+    <img src="/Game/4.jpg" style="margin-right: 20px;margin-right: 30px;margin-left: 70px;margin-top: 50px;width: 300px;height: 250px;">
+    <img src="/Game/5.jpg" style="margin-right: 20px;margin-right: 20px;margin-left: 20px;margin-top: 30px;"> 
 ><br>
     
 </div>
